static/psi4manual/1.4.0/_sources/autodoc_testsuite_cookbook.rst.txt

.. _`apdx:testSuitecookbook`:

=======================================================
COOKBOOK
=======================================================

=======================================================   ============
Input File                                                Description 
=======================================================   ============
:srcsample:`cookbook/manual-fd-hess-energy`               SCF STO-3G finite-difference tests
:srcsample:`cookbook/rohf-orb-rot`                          Test if DGAS's orbital rotation code matches expected values.   The first two calculations compute the X (symm A'') and A (symm A') states of HO2 in Cs by restricting the occupations of the two states.   The second two calculations compute the X and A states of HO2 in C1. Computation of the A state requires a rotation of the HOMO and SOMO by 90 degrees (i.e., by swapping these two orbitals). The orb_rotate() function accomplishes this.
:srcsample:`cookbook/manual-fd-hess-grad`                 SCF STO-3G finite-difference tests
=======================================================   ============

